# check_text

./: .gitignore  Cargo.toml  LICENSE  README.md  \  build.rs
src/: main.rs
ui/: appwindow.slint
